Sistemate accentate con sed <3

--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -64,7 +64,7 @@ Lo standard definisce delle speciche per cui i componenti siano in grado
 di comunicare fra di loro, in maniera indipendente dal linguaggio utilizzato e
 dalle applicazioni che li usano. L'idea è quella di introdurre una uniformità nel
 comportamento: dll, componenti su macchine diverse, . . . Si ottiene così omo\i{}
-geneit` a livello di comportamento fra oggetto locale e remoto, introducendo
+geneità a livello di comportamento fra oggetto locale e remoto, introducendo
 così trasparenza. In particolare, si utilizzano metodi standard per la comuni\i{}
 cazione remota, come RPC di DCE.
 Alla base di COM vi è l'uso delle interfacce: un componente, per poter
