--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -131,7 +131,7 @@ rispetto a CORBA (narrowing) e di fornire diverse funzioni di varia utilità.
 Gli adattatori sono diventati dei componenti quasi più importanti dell'ORB
 stesso, visto che sono gli abilitatori del servizio stesso. L'ORB si preoccupa di
 crearlo ed abilitarlo, mediante diverse politiche specificabili.
-A cosa serve quindi? A superare le disomogeneit` e dierenze che vi sono
+A cosa serve quindi? A superare le disomogeneità e dierenze che vi sono
 fra le varie implementazioni degli ORB, dovute appunto all'eterogeneità (per
 esempio, riuscendo a far colloquiare linguaggi non tipati con quelli tipati!).
 Questo sistema permette di disaccoppiare in maniera corretta l'ORB dall'implementazione del servizio stesso: l'ORB lo
