--- a/Sections/WS.tex
+++ b/Sections/WS.tex
@@ -13,7 +13,7 @@ standard). Gli obiettivi sono quindi quelli di realizzare delle Service Oriented
 Application (mappando l'interfaccia di interazione ad alto livello) o delle Enterprise Application Integration,come SAP,
 ovvero un sistema in grado di integrare
 anche sistemi legacy.
-Perch` allora non usare sempre il web, perché esistono anche altri mw ancoe
+Perché allora non usare sempre il web, perché esistono anche altri mw ancoe
 ra? Il problema è che il Web ha un costo molto elevato, per cui potrebbe essere
 utile per sistemi che richiedono una grana molto grossa.
 \subsection{Struttura generale de WS}
@@ -42,7 +42,7 @@ provider abbia stato!
 Nelle prime implementazioni dei WS non erano previsti meccanismi per la
 sicurezza, il management e la QoS. Si aveva quindi, per esempio, solo crittograa
 a livello applicativo, il che però non era un sistema standard!
-Perch` si è deciso di utilizzare XML? Permette di specificare in una maniera
+Perché si è deciso di utilizzare XML? Permette di specificare in una maniera
 e e
 fortemente strutturata (realizzando dati che si possono validare formalmente, e
 utilizzando DTD/XSD si possono anche controllare dal punto di vista sintatticosemantico), potendo quindi esprimere le
@@ -109,7 +109,7 @@ WSDL prevede diversi modi di interazione! Non solo più modi sincroni (con
 attesa di messaggio o sollecitazione da parte del client) ma anche asincroni (one-
 82
 way, o notication: cambia da chi esce il messaggio!).
-WSDL è un linguaggio molto pesante, ma che garantisce un'alta essibilit`
+WSDL è un linguaggio molto pesante, ma che garantisce un'alta flessibilità
 quindi: permette anche di invertire i ruoli fra C e S! Tuttavia, è fondamentale
 per poter generare in maniera automatica proxy e stub, oppure per realizzare
 dei wrapper appositi per integrare facilmente sistemi legacy!
@@ -143,7 +143,7 @@ come le banche in Italia. Tuttavia, i WS presentano un alto overhead rispetto ad
 altre tecnologie (è possibile che non sia una comunicazione limitata a due attori,
 e si lavora sempre a livello applicativo). Attualmente è una tecnologia ancora
 molto in fase di sviluppo e studio (nelle prime versione, i protocolli mancavano
-molto d'espressivit`: la sicurezza per esempio era fornita solo a basso livello).
+molto d'espressività: la sicurezza per esempio era fornita solo a basso livello).
 L'evoluzione che si immagina quindi per i WS è quella di far evolvere il
 sistema, come una composizione e coordinazione dei servizi, per poter aprire i
 WS ad una categoria di utenti più ampia. L'idea sarebbe quindi quella che, per
