--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -249,7 +249,7 @@ cui quando tutti i programmi niscono, anche la macchina termina. Essendo
 dotata di un'unica memoria, come devino essere strutturate le operazioni? La
 concorrenza è un requisito difficile da realizzare, in confronto al mettere le opere
 azioni in sequenza. Le diverse PRAM si possono quindi categorizzare a seconda
-della tipologia delle operazioni (in generale si hanno letture concorrenti e scritture sequenziali; la concorrenza `
+della tipologia delle operazioni (in generale si hanno letture concorrenti e scritture sequenziali; la concorrenza è
 invece utilizzata per il sistema di I/O, per
 limitarne il collo di bottiglia). Un PRAM è difficile da realizzare perché non è
 scalabile.
@@ -304,7 +304,7 @@ EP (N ) = 1
 E l'efficienza massima:
 Sotto queste condizioni si avrebbe che tutti i processori lavorano al massimo,
 ovvero non abbiamo processori idle che possono risultare inutili. Questi sono
-coefficienti statistici, validi per tutto l'algoritmo. Quello che si può osservare `
+coefficienti statistici, validi per tutto l'algoritmo. Quello che si può osservare è
 che la situazione ideale la si avrebbe se lo speed-up dipendesse in maniera lineare dal numero dei processori. Una
 soluzione ideale non interessante sarebbe
 se si distribuisse i compiti ai processi in maniera uguale (un programma totalmente parallelo!), raccogliendo solo alla
@@ -440,7 +440,7 @@ T0 (N )
 T1 (N )
 (12)
 Per cui l'efficienza non sembra dipendere dal numero dei processori. . . in realtà,
-` proprio T0 (N ) a dipendere dal numero dei processori : l'overhead dipende dal
+è proprio T0 (N ) a dipendere dal numero dei processori : l'overhead dipende dal
 numero di processori impegnati.
 Supponiamo quindi di avere come obiettivo per l'architettura di mantenere
 costante l'efficienza:
