--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -198,7 +198,7 @@ L'invocazione statica bloccante è quella che costa di meno (semantica ate
 most-once), però può anche essere molto limitante. Questo perché i client e
 i servant devono avere già deciso i proxy in maniera statica, e quindi anche i
 servizi! Tutto prima dell'esecuzione!
-Inizialmente si era introdotta anche un altra modalità, detta one-way, ma `
+Inizialmente si era introdotta anche un altra modalità, detta one-way, ma è
 deprecata (semantica best-eort, senza possibilità di introdurre QoS).
 29 Da ricordare che statico non signica che il client è legato allo specifico servant, ma che il
 contratto è deciso prima dell'esecuzione
@@ -376,7 +376,7 @@ Method Invocation, che è un ulteriore modo per definire una comunicazione
 sincrona non bloccante: il cliente non deve attendere quindi per il risultato.
 Si ottiene cambiando solo l'interfaccia, per cui si delega un altro oggetto per
 attendere la risposta, separando la fase di richiesta da quella callback. Tuttavia,
-` necessario che sia il cliente a specificare il codice della callback da eseguire.
+è necessario che sia il cliente a specificare il codice della callback da eseguire.
 Inoltre, si può anche definire che il client recuperi il risultato usando un pollo
 object. Nel caso di call-back quindi si utilizza un sistema di re and forget. In
 entrambi i casi si lavora solo dal lato del client, per estendere la funzionalità.
